# intelligent-customer-service

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TEST_REPORT.md  docker-compose.yml  project-documentation.md  pyproject.toml  test_simple.py
config/: .env.example
src/: __init__.py
src/agent_core/: __init__.py  agent.py  tools.py
src/api/: __init__.py  routes.py
src/document_processor/: __init__.py  processor.py
src/frontend/: __init__.py  app.py
src/rag_chain/: __init__.py  chain.py
src/vector_database/: __init__.py  store.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_deepseek_api.py  test_document_processor.py  test_performance.py  test_tools.py  test_vector_database.py
